[gd_scene load_steps=15 format=3 uid="uid://cee0f16o8788r"]

[ext_resource type="Script" path="res://Generic Components/Scripts/conversation.gd" id="1_i3n2i"]
[ext_resource type="Script" path="res://Generic Components/Scripts/conversation_characters.gd" id="2_bcwbx"]
[ext_resource type="Script" path="res://Generic Components/Scenes/conversation_ui.gd" id="3_k11cb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uw144"]
size = Vector2(1152, 64.8)

[sub_resource type="Gradient" id="Gradient_mm07e"]
offsets = PackedFloat32Array(0.243194, 0.767695, 0.92922)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0.784314, 0, 0, 0, 0.658824)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5yje8"]
gradient = SubResource("Gradient_mm07e")
height = 192
fill_to = Vector2(0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bvkm6"]
font_size = 32
shadow_color = Color(1, 1, 1, 0.262745)
shadow_offset = Vector2(2, 2)

[sub_resource type="Animation" id="Animation_ls7t0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ConversationUI/Dialogue:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ConversationCharacters:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ConversationCharacters/OtherCharacter:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ji8uk"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ConversationUI/Dialogue:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ConversationCharacters:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_riqnb"]
resource_name = "fade_in_characters"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ConversationCharacters:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_y1pxo"]
resource_name = "fade_out"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ConversationUI/Dialogue:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ConversationCharacters:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_cnht3"]
resource_name = "fade_out_characters"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ConversationCharacters:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_nlonn"]
resource_name = "fade_out_other_character"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ConversationCharacters/OtherCharacter:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uspmg"]
_data = {
"RESET": SubResource("Animation_ls7t0"),
"fade_in": SubResource("Animation_ji8uk"),
"fade_in_characters": SubResource("Animation_riqnb"),
"fade_out": SubResource("Animation_y1pxo"),
"fade_out_characters": SubResource("Animation_cnht3"),
"fade_out_other_character": SubResource("Animation_nlonn")
}

[node name="Conversation" type="Node2D"]
modulate = Color(1, 1, 1, 0)
z_index = 3
script = ExtResource("1_i3n2i")
dialogue_file = "res://Generic Components/Dialogue/practice.json"

[node name="ConversationCharacters" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0)
script = ExtResource("2_bcwbx")

[node name="StartingCharacter" type="Node2D" parent="ConversationCharacters"]

[node name="CharacterClickArea" type="Area2D" parent="ConversationCharacters/StartingCharacter"]
monitorable = false

[node name="CharacterCollisionShape2D" type="CollisionShape2D" parent="ConversationCharacters/StartingCharacter/CharacterClickArea"]

[node name="StartingCharacterAnimationPlayer" type="AnimationPlayer" parent="ConversationCharacters/StartingCharacter"]

[node name="OtherCharacter" type="Node2D" parent="ConversationCharacters"]

[node name="OtherCharacterAnimationPlayer" type="AnimationPlayer" parent="ConversationCharacters/OtherCharacter"]

[node name="DialogueClickArea" type="Area2D" parent="."]
position = Vector2(16, 552)
monitorable = false

[node name="DialogueCollisionShape2D" type="CollisionShape2D" parent="DialogueClickArea"]
position = Vector2(560, -228)
scale = Vector2(1, 10)
shape = SubResource("RectangleShape2D_uw144")

[node name="ConversationUI" type="CanvasLayer" parent="."]
layer = 3
script = ExtResource("3_k11cb")

[node name="Dialogue" type="VBoxContainer" parent="ConversationUI"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
mouse_filter = 2
alignment = 2

[node name="Control" type="Control" parent="ConversationUI/Dialogue"]
custom_minimum_size = Vector2(0, 192)
layout_mode = 2
size_flags_vertical = 10
mouse_filter = 2

[node name="Gradient" type="TextureRect" parent="ConversationUI/Dialogue/Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -192.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 10
mouse_filter = 2
texture = SubResource("GradientTexture2D_5yje8")

[node name="CharacterDialogue" type="VBoxContainer" parent="ConversationUI/Dialogue/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="NameLabel" type="Label" parent="ConversationUI/Dialogue/Control/CharacterDialogue"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
size_flags_horizontal = 0
label_settings = SubResource("LabelSettings_bvkm6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ConversationUI/Dialogue/Control/CharacterDialogue"]
layout_mode = 2
mouse_filter = 2

[node name="MarginLeft" type="Control" parent="ConversationUI/Dialogue/Control/CharacterDialogue/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
mouse_filter = 2

[node name="DialogueLabel" type="RichTextLabel" parent="ConversationUI/Dialogue/Control/CharacterDialogue/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
fit_content = true

[node name="MarginRight" type="Control" parent="ConversationUI/Dialogue/Control/CharacterDialogue/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
mouse_filter = 2

[node name="DialogueChoices" type="VBoxContainer" parent="ConversationUI/Dialogue/Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -34.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 16

[node name="ConversationAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uspmg")
}
